--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@
     padding: 0%;
 }
 body{
-    background: linear-gradient(#a9ffcd, #7caa80, #afebbb);
+    background: linear-gradient(90deg, rgb(216, 116, 255) 0%, rgb(198, 112, 255) 50%, rgb(248, 139, 248) 100%);
     
 }
     .tank{
-        background-image: url(../img/opi.jpg);
+        background-image: url(../img/tahyt.jpg);
     background-size: cover;
     background-position: center;
     padding: 10rem 0;
@@ -17,13 +17,13 @@ body{
         display: flex;
         justify-content: center;
         font-size: 50px;
-        color: white;
+        color: rgb(24, 5, 36);
     }
     .tank p{
         display: flex;
         justify-content: center;
         font-size: 32px;
-        color: white;
+        color: rgb(29, 0, 61);
     }
     .ad4{
         background: linear-gradient(#2a9b59, #213857, #1b4a77);
@@ -47,6 +47,9 @@ padding: 0%;
         justify-content: space-around;
     
     }
+    .lance{
+        margin-bottom: 80px;
+    }
  .estru{
         display: flex;
       flex-direction: row-reverse;
@@ -56,20 +59,21 @@ padding: 0%;
     }
     .fgy{
         width: 450px;
+        height: 400px;
         border-radius: 10px;
-        border: 20px solid rgb(14, 85, 44);
+        border: 20px solid rgb(172, 7, 136);
     }
     .sup {
         display: flex;
         align-items: center;
-        background: linear-gradient(90deg, rgb(83, 180, 143) 0%, rgb(46, 100, 51) 50%, rgba(83, 180, 143) 100%);
+        background-color: #190c31;
         padding: 0;
     }
     .logo {
-        width: 68px;
-        margin-top: 10px;
-        padding-left: 12px;
-
+        width: 82px;
+        height: 78px;
+        margin: 0%;
+        padding: 0%;
     }
     
     nav{
@@ -99,7 +103,7 @@ padding: 0%;
         }
         .default-btn {
             padding: 15px 20px;
-            background: linear-gradient(90deg, rgb(20, 207, 136) 0%, rgb(129, 204, 137) 50%, rgba(20, 207, 136) 100%);
+            background: linear-gradient(90deg, rgb(117, 7, 121) 0%, rgb(158, 3, 158) 50%, rgb(194, 14, 194) 100%);
             background-color: auto;
             border-radius: 5px;
             list-style: none;
@@ -111,7 +115,7 @@ padding: 0%;
           
         }
         .sup-master .default-btn:hover {
-            background: linear-gradient(90deg, rgb(22, 158, 106) 0%, rgb(9, 218, 148) 50%, rgba(22, 158, 106) 100%);
+            background: linear-gradient(90deg, rgb(58, 12, 59) 0%, rgb(90, 13, 90) 50%, rgb(247, 13, 247) 100%);
             color: #fff;
             list-style: none;
         }
@@ -124,7 +128,7 @@ padding: 0%;
         #po{
             text-align: center;
             padding: 15px 20px;
-            background: linear-gradient(#42cf7d, #adeeb1, #afebbb);
+            background: linear-gradient(90deg, rgb(84, 5, 100) 0%, rgb(236, 3, 205) 50%, rgb(138, 1, 76) 100%);
             
             
            
@@ -157,6 +161,7 @@ padding: 0%;
             justify-content: space-around;
             width: 90%;
             margin-left: 5%;
+            background-image: url(../img/dac1.jpg);
         }
         
         .plan {
@@ -176,15 +181,15 @@ padding: 0%;
             list-style: none;
             height: 50px;
             line-height: 50px;
-            background-color: #213857;
+            background: linear-gradient(90deg, rgb(81, 24, 83) 0%, rgb(124, 29, 124) 50%, rgb(105, 53, 105) 100%);
             
             padding-left: 12px;
             height: auto;
             border-width: 15px;
             border-style: solid;
-            background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(77,167,104,1) 100%);
+          
             border-radius: 10%;
-            color: #ffffff;
+            color: #54005f;
             
         }
         
@@ -194,29 +199,32 @@ padding: 0%;
             text-transform: uppercase;
             font-size: 20px;
             font-weight: bold;
-            color: #2ecc71;
-            background-image: url(../img/oil.jpg);
+            color: #54005f;
+            background-color: #59105c;
             padding: 0;
             border-radius: 30%;
             border: 15px solid;
             text-align: center;
-            
-            
+            margin-top: 20px;  
+        }
+        .plan .plan-name h2{
+            color: #e41cff;
         }
         
         .plan .plan-btn {
             margin-top: 10px;
-            background-color: #f04906;
+            background: linear-gradient(90deg, rgb(149, 2, 179) 0%, rgb(183, 0, 255) 50%, rgb(119, 11, 141) 100%);
             color: rgb(75, 75, 75);
             font-size: 24px;
             height: 75px;
             line-height: 75px;
             cursor: pointer;
             border: none;
+            margin-bottom: 20px;
 
         }
             .plan .plan-btn:hover {
-                background-color: #090244;
+                background: linear-gradient(90deg, rgb(212, 92, 236) 0%, rgb(163, 52, 207) 50%, rgb(119, 11, 141) 100%);
                 color: rgb(0, 170, 255);
                 font-size: 24px;
                 height: 75px;
@@ -228,10 +236,10 @@ padding: 0%;
 
             .plan .plan-btn a {
                 text-decoration: none;
-                color: #1b08c5;
+                color: #f397f7;
             }
             .plan .plan-btn a:hover{
-                color: #06e95d;
+                color: #f700ad;
             }
         
         
@@ -254,7 +262,7 @@ padding: 0%;
 
         #divBusca{
             background-color:#E0EEEE;
-            border:solid 2px #3aca71;
+            border:solid 2px #b30696;
             border-radius:10px;
             width: 308px;
             height:32px;
@@ -280,12 +288,12 @@ padding: 0%;
             border-radius:0 7px 7px 0;
             width:60px;
             font-weight:bold;
-            background: linear-gradient(90deg, rgb(20, 207, 136) 0%, rgb(129, 204, 137) 50%, rgba(20, 207, 136) 100%);
+            background: linear-gradient(90deg, rgb(117, 7, 121) 0%, rgb(158, 3, 158) 50%, rgb(194, 14, 194) 100%);
             color: white;
 
           }
           #btnBusca:hover{
-            background: linear-gradient(90deg, rgb(22, 158, 106) 0%, rgb(9, 218, 148) 50%, rgba(22, 158, 106) 100%);
+            background: linear-gradient(90deg, rgb(58, 12, 59) 0%, rgb(90, 13, 90) 50%, rgb(247, 13, 247) 100%);
           }
           
           #divBusca img{
@@ -304,13 +312,14 @@ padding: 0%;
           }
           
 .container {
-    background: linear-gradient(#42cf7d, #88da8d, #afebbb);
+    background: linear-gradient(90deg, rgb(242, 53, 248) 0%, rgb(255, 0, 255) 50%, rgb(255, 0, 170) 100%);
     padding: 20px;
     
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 h2 {
@@ -330,10 +339,11 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-    width: 200%;
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
+    
 
 }
 
@@ -341,17 +351,17 @@ button {
     width: 100%;
     padding: 10px;
     border: none;
-    background: linear-gradient(90deg, rgb(20, 207, 136) 0%, rgb(129, 204, 137) 50%, rgba(20, 207, 136) 100%);
+    background: linear-gradient(90deg, rgb(72, 0, 75) 0%, rgb(255, 0, 255) 50%, rgb(207, 26, 147) 100%);
     color: #fff;
     border-radius: 3px;
     cursor: pointer;
 }
 
 button:hover {
-    background: linear-gradient(90deg, rgb(22, 158, 106) 0%, rgb(9, 218, 148) 50%, rgba(22, 158, 106) 100%);
+    background: linear-gradient(90deg, rgb(212, 0, 255) 0%, rgb(255, 0, 255) 50%, rgb(255, 103, 204) 100%);
 }
 .searchdomain-container {
-    background: linear-gradient(#42cf7d, #5d8660, #afebbb);
+    background-image: url(../img/uiyt.jpg);
     text-align: center;
     padding: 5rem 0;
 }
@@ -376,14 +386,14 @@ button:hover {
 }
 
 .searchdomain-container input[type="text"] {
-    width: 80%;
+    width: 50%;
     padding: 20px;
     font-size: 20px;
     margin-bottom: 25px;
 }
 
 .searchdomain-container input[type="submit"] {
-    background: linear-gradient(90deg, rgb(20, 207, 136) 0%, rgb(129, 204, 137) 50%, rgba(20, 207, 136) 100%);
+    background: linear-gradient(90deg, rgb(117, 7, 121) 0%, rgb(158, 3, 158) 50%, rgb(194, 14, 194) 100%);
     padding: 15px 30px;
     color: #fff;
     font-size: 24px;
@@ -405,7 +415,7 @@ button:hover {
 }
 .kyui{
     display: flex;
-    margin-right: 500px;
+    margin-right: 300px;
 }
 .hp{
     display: flex;
@@ -498,6 +508,23 @@ footer {
     font-weight: bold;
     margin: 50px 0 100px;
 }    
+#smulf{
+   margin-right: 40%;
+   color: #b30696;
+}
+.menu {
+    width: 80%;
+    background-color: rgb(190, 104, 183);
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .menu h1, h2, p {
+    text-align: center;
+  }
 
         
 
